--- a/src/components/MatchCard/index.css
+++ b/src/components/MatchCard/index.css
@@ -1,1 +1,16 @@
 /* Write your CSS here */
+.matchCard-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 50vh;
+  width: 300px;
+  background-color: orange;
+  padding:10px;
+  margin:10px;
+  border-radius:10px;
+}
+.logo {
+  height: 100px;
+  width: 100px;
+}
