--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,1 +1,13 @@
 /* Write your CSS here */
+.notfound-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image:"https://assets.ccbp.in/frontend/react-js/ipl-dashboard-lg-bg.png";
+  height:100vh;
+  background-size:cover;
+}
+.notfound-heading {
+  font-size: 30px;
+  color: white;
+}
